crud clan, member

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -1,6 +1,6 @@
 {
   "confirmEmail": "Confirm email",
   "resetPassword": "Reset password",
-  "passwordOnetimeTitle": "【サンファーム】認証コードのお知らせ",
+  "passwordOnetimeTitle": "Thông báo mã xác thực từ Genealogy",
   "inviteEmailTitle": "【サンファーム】サービスへの招待 "
 }
