--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -2,5 +2,5 @@
   "confirmEmail": "Confirm email",
   "resetPassword": "Reset password",
   "passwordOnetimeTitle": "Thông báo mã xác thực từ Genealogy",
-  "inviteEmailTitle": "【サンファーム】サービスへの招待 "
+  "inviteEmailTitle": "Thư mời tham gia vào gia phả website Genealogy"
 }
